--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
         <link rel="stylesheet" href="css/L.Control.Layers.Tree.css">
         <link rel="stylesheet" href="css/qgis2web.css">
         <link rel="stylesheet" href="css/fontawesome-all.min.css">
-        <link rel="stylesheet" href="css/MarkerCluster.css">
-        <link rel="stylesheet" href="css/MarkerCluster.Default.css">
-        <link rel="stylesheet" href="css/leaflet-search.css">
         <style>
         html, body, #map {
             width: 100%;
@@ -36,12 +33,10 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
-        <script src="js/leaflet.markercluster.js"></script>
-        <script src="js/leaflet-search.js"></script>
-        <script src="data/Partida_2.js"></script>
-        <script src="data/Meta_3.js"></script>
-        <script src="data/PercursoMM_4.js"></script>
-        <script src="data/Kms_5.js"></script>
+        <script src="data/Partida_1.js"></script>
+        <script src="data/Meta_2.js"></script>
+        <script src="data/PercursoMM_3.js"></script>
+        <script src="data/10K_4.js"></script>
         <script>
         var highlightLayer;
         function highlightFeature(e) {
@@ -57,6 +52,7 @@
                 fillOpacity: 1
               });
             }
+            highlightLayer.openPopup();
         }
         var map = L.map('map', {
             zoomControl:false, maxZoom:28, minZoom:1
@@ -123,26 +119,21 @@
             maxNativeZoom: 20
         });
         layer_GoogleSatellite_0;
-        map.createPane('pane_Positronretina_1');
-        map.getPane('pane_Positronretina_1').style.zIndex = 401;
-        var layer_Positronretina_1 = L.tileLayer('https://a.basemaps.cartocdn.com/light_all/{z}/{x}/{y}@2x.png', {
-            pane: 'pane_Positronretina_1',
-            opacity: 1.0,
-            attribution: '<a href="https://cartodb.com/basemaps/">Map tiles by CartoDB, under CC BY 3.0. Data by OpenStreetMap, under ODbL.</a>',
-            minZoom: 1,
-            maxZoom: 28,
-            minNativeZoom: 0,
-            maxNativeZoom: 20
-        });
-        layer_Positronretina_1;
-        map.addLayer(layer_Positronretina_1);
-        function pop_Partida_2(feature, layer) {
+        map.addLayer(layer_GoogleSatellite_0);
+        function pop_Partida_1(feature, layer) {
             layer.on({
                 mouseout: function(e) {
                     for (var i in e.target._eventParents) {
                         if (typeof e.target._eventParents[i].resetStyle === 'function') {
                             e.target._eventParents[i].resetStyle(e.target);
                         }
+                    }
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
                     }
                 },
                 mouseover: highlightFeature,
@@ -162,9 +153,9 @@
 			layer.bindPopup(content, { maxHeight: 400 });
         }
 
-        function style_Partida_2_0() {
+        function style_Partida_1_0() {
             return {
-                pane: 'pane_Partida_2',
+                pane: 'pane_Partida_1',
                 radius: 8.0,
                 opacity: 1,
                 color: 'rgba(61,128,53,1.0)',
@@ -175,36 +166,43 @@
                 fill: true,
                 fillOpacity: 1,
                 fillColor: 'rgba(84,176,74,1.0)',
-                interactive: true,
+                interactive: false,
             }
         }
-        map.createPane('pane_Partida_2');
-        map.getPane('pane_Partida_2').style.zIndex = 402;
-        map.getPane('pane_Partida_2').style['mix-blend-mode'] = 'normal';
-        var layer_Partida_2 = new L.geoJson(json_Partida_2, {
+        map.createPane('pane_Partida_1');
+        map.getPane('pane_Partida_1').style.zIndex = 401;
+        map.getPane('pane_Partida_1').style['mix-blend-mode'] = 'normal';
+        var layer_Partida_1 = new L.geoJson(json_Partida_1, {
             attribution: '',
-            interactive: true,
-            dataVar: 'json_Partida_2',
-            layerName: 'layer_Partida_2',
-            pane: 'pane_Partida_2',
-            onEachFeature: pop_Partida_2,
+            interactive: false,
+            dataVar: 'json_Partida_1',
+            layerName: 'layer_Partida_1',
+            pane: 'pane_Partida_1',
+            onEachFeature: pop_Partida_1,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.circleMarker(latlng, style_Partida_2_0(feature));
+                return L.circleMarker(latlng, style_Partida_1_0(feature));
             },
         });
-        bounds_group.addLayer(layer_Partida_2);
-        map.addLayer(layer_Partida_2);
-        function pop_Meta_3(feature, layer) {
+        bounds_group.addLayer(layer_Partida_1);
+        map.addLayer(layer_Partida_1);
+        function pop_Meta_2(feature, layer) {
             layer.on({
                 mouseout: function(e) {
                     for (var i in e.target._eventParents) {
                         if (typeof e.target._eventParents[i].resetStyle === 'function') {
                             e.target._eventParents[i].resetStyle(e.target);
                         }
+                    }
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
                     }
                 },
                 mouseover: highlightFeature,
@@ -224,9 +222,9 @@
 			layer.bindPopup(content, { maxHeight: 400 });
         }
 
-        function style_Meta_3_0() {
+        function style_Meta_2_0() {
             return {
-                pane: 'pane_Meta_3',
+                pane: 'pane_Meta_2',
                 radius: 8.0,
                 opacity: 1,
                 color: 'rgba(128,17,25,1.0)',
@@ -237,36 +235,43 @@
                 fill: true,
                 fillOpacity: 1,
                 fillColor: 'rgba(219,30,42,1.0)',
-                interactive: true,
+                interactive: false,
             }
         }
-        map.createPane('pane_Meta_3');
-        map.getPane('pane_Meta_3').style.zIndex = 403;
-        map.getPane('pane_Meta_3').style['mix-blend-mode'] = 'normal';
-        var layer_Meta_3 = new L.geoJson(json_Meta_3, {
+        map.createPane('pane_Meta_2');
+        map.getPane('pane_Meta_2').style.zIndex = 402;
+        map.getPane('pane_Meta_2').style['mix-blend-mode'] = 'normal';
+        var layer_Meta_2 = new L.geoJson(json_Meta_2, {
             attribution: '',
-            interactive: true,
-            dataVar: 'json_Meta_3',
-            layerName: 'layer_Meta_3',
-            pane: 'pane_Meta_3',
-            onEachFeature: pop_Meta_3,
+            interactive: false,
+            dataVar: 'json_Meta_2',
+            layerName: 'layer_Meta_2',
+            pane: 'pane_Meta_2',
+            onEachFeature: pop_Meta_2,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.circleMarker(latlng, style_Meta_3_0(feature));
+                return L.circleMarker(latlng, style_Meta_2_0(feature));
             },
         });
-        bounds_group.addLayer(layer_Meta_3);
-        map.addLayer(layer_Meta_3);
-        function pop_PercursoMM_4(feature, layer) {
+        bounds_group.addLayer(layer_Meta_2);
+        map.addLayer(layer_Meta_2);
+        function pop_PercursoMM_3(feature, layer) {
             layer.on({
                 mouseout: function(e) {
                     for (var i in e.target._eventParents) {
                         if (typeof e.target._eventParents[i].resetStyle === 'function') {
                             e.target._eventParents[i].resetStyle(e.target);
                         }
+                    }
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
                     }
                 },
                 mouseover: highlightFeature,
@@ -316,9 +321,9 @@
 			layer.bindPopup(content, { maxHeight: 400 });
         }
 
-        function style_PercursoMM_4_0() {
+        function style_PercursoMM_3_0() {
             return {
-                pane: 'pane_PercursoMM_4',
+                pane: 'pane_PercursoMM_3',
                 opacity: 1,
                 color: 'rgba(33,176,238,1.0)',
                 dashArray: '',
@@ -329,21 +334,21 @@
                 interactive: false,
             }
         }
-        map.createPane('pane_PercursoMM_4');
-        map.getPane('pane_PercursoMM_4').style.zIndex = 404;
-        map.getPane('pane_PercursoMM_4').style['mix-blend-mode'] = 'normal';
-        var layer_PercursoMM_4 = new L.geoJson(json_PercursoMM_4, {
+        map.createPane('pane_PercursoMM_3');
+        map.getPane('pane_PercursoMM_3').style.zIndex = 403;
+        map.getPane('pane_PercursoMM_3').style['mix-blend-mode'] = 'normal';
+        var layer_PercursoMM_3 = new L.geoJson(json_PercursoMM_3, {
             attribution: '',
             interactive: false,
-            dataVar: 'json_PercursoMM_4',
-            layerName: 'layer_PercursoMM_4',
-            pane: 'pane_PercursoMM_4',
-            onEachFeature: pop_PercursoMM_4,
-            style: style_PercursoMM_4_0,
+            dataVar: 'json_PercursoMM_3',
+            layerName: 'layer_PercursoMM_3',
+            pane: 'pane_PercursoMM_3',
+            onEachFeature: pop_PercursoMM_3,
+            style: style_PercursoMM_3_0,
         });
-        bounds_group.addLayer(layer_PercursoMM_4);
-        map.addLayer(layer_PercursoMM_4);
-        function pop_Kms_5(feature, layer) {
+        bounds_group.addLayer(layer_PercursoMM_3);
+        map.addLayer(layer_PercursoMM_3);
+        function pop_10K_4(feature, layer) {
             layer.on({
                 mouseout: function(e) {
                     for (var i in e.target._eventParents) {
@@ -351,15 +356,25 @@
                             e.target._eventParents[i].resetStyle(e.target);
                         }
                     }
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
+                    }
                 },
                 mouseover: highlightFeature,
             });
             var popupContent = '<table>\
                     <tr>\
+                        <td colspan="2">' + (feature.properties['Name'] !== null ? autolinker.link(feature.properties['Name'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
                         <td colspan="2">' + (feature.properties['id'] !== null ? autolinker.link(feature.properties['id'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['KM'] !== null ? autolinker.link(feature.properties['KM'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2">' + (feature.properties['Dist'] !== null ? autolinker.link(feature.properties['Dist'].toLocaleString()) : '') + '</td>\
                     </tr>\
                 </table>';
             var content = removeEmptyRowsFromPopupContent(popupContent, feature);
@@ -369,53 +384,39 @@
 			layer.bindPopup(content, { maxHeight: 400 });
         }
 
-        function style_Kms_5_0() {
+        function style_10K_4_0() {
             return {
-                pane: 'pane_Kms_5',
-                radius: 13.2,
+                pane: 'pane_10K_4',
                 opacity: 1,
-                color: 'rgba(255,255,255,1.0)',
+                color: 'rgba(79,255,63,1.0)',
                 dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 3.0,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(103,248,197,1.0)',
+                lineCap: 'square',
+                lineJoin: 'bevel',
+                weight: 2.0,
+                fillOpacity: 0,
                 interactive: false,
             }
         }
-        map.createPane('pane_Kms_5');
-        map.getPane('pane_Kms_5').style.zIndex = 405;
-        map.getPane('pane_Kms_5').style['mix-blend-mode'] = 'normal';
-        var layer_Kms_5 = new L.geoJson(json_Kms_5, {
+        map.createPane('pane_10K_4');
+        map.getPane('pane_10K_4').style.zIndex = 404;
+        map.getPane('pane_10K_4').style['mix-blend-mode'] = 'normal';
+        var layer_10K_4 = new L.geoJson(json_10K_4, {
             attribution: '',
             interactive: false,
-            dataVar: 'json_Kms_5',
-            layerName: 'layer_Kms_5',
-            pane: 'pane_Kms_5',
-            onEachFeature: pop_Kms_5,
-            pointToLayer: function (feature, latlng) {
-                var context = {
-                    feature: feature,
-                    variables: {}
-                };
-                return L.circleMarker(latlng, style_Kms_5_0(feature));
-            },
+            dataVar: 'json_10K_4',
+            layerName: 'layer_10K_4',
+            pane: 'pane_10K_4',
+            onEachFeature: pop_10K_4,
+            style: style_10K_4_0,
         });
-        var cluster_Kms_5 = new L.MarkerClusterGroup({showCoverageOnHover: false,
-            spiderfyDistanceMultiplier: 2});
-        cluster_Kms_5.addLayer(layer_Kms_5);
-
-        bounds_group.addLayer(layer_Kms_5);
-        cluster_Kms_5.addTo(map);
+        bounds_group.addLayer(layer_10K_4);
+        map.addLayer(layer_10K_4);
         var baseMaps = {};
         var overlaysTree = [
-            {label: '<img src="legend/Kms_5.png" /> Kms', layer: cluster_Kms_5},
-            {label: '<img src="legend/PercursoMM_4.png" /> Percurso MM', layer: layer_PercursoMM_4},
-            {label: '<img src="legend/Meta_3.png" /> Meta', layer: layer_Meta_3},
-            {label: '<img src="legend/Partida_2.png" /> Partida', layer: layer_Partida_2},
-            {label: "Positron (retina)", layer: layer_Positronretina_1},
+            {label: '<img src="legend/10K_4.png" /> 10K', layer: layer_10K_4},
+            {label: '<img src="legend/PercursoMM_3.png" /> Percurso MM', layer: layer_PercursoMM_3},
+            {label: '<img src="legend/Meta_2.png" /> Meta', layer: layer_Meta_2},
+            {label: '<img src="legend/Partida_1.png" /> Partida', layer: layer_Partida_1},
             {label: "Google Satellite", layer: layer_GoogleSatellite_0},]
         var lay = L.control.layers.tree(null, overlaysTree,{
             //namedToggle: true,
@@ -428,36 +429,6 @@
         });
         lay.addTo(map);
         setBounds();
-        var i = 0;
-        layer_Kms_5.eachLayer(function(layer) {
-            var context = {
-                feature: layer.feature,
-                variables: {}
-            };
-            layer.bindTooltip((layer.feature.properties['KM'] !== null?String('<div style="color: #323232; font-size: 12pt; font-family: \'Arial\', sans-serif;">' + layer.feature.properties['KM']) + '</div>':''), {permanent: true, offset: [-0, -16], className: 'css_Kms_5'});
-            labels.push(layer);
-            totalMarkers += 1;
-              layer.added = true;
-              addLabel(layer, i);
-              i++;
-        });
-        map.addControl(new L.Control.Search({
-            layer: cluster_Kms_5,
-            initial: false,
-            hideMarkerOnCollapse: true,
-            propertyName: 'KM'}));
-        document.getElementsByClassName('search-button')[0].className +=
-         ' fa fa-binoculars';
-        resetLabels([layer_Kms_5]);
-        map.on("zoomend", function(){
-            resetLabels([layer_Kms_5]);
-        });
-        map.on("layeradd", function(){
-            resetLabels([layer_Kms_5]);
-        });
-        map.on("layerremove", function(){
-            resetLabels([layer_Kms_5]);
-        });
         </script>
     </body>
 </html>
